@startuml

namespace MessengerFramework {

  class Event {
    + [Key => Value] rawData
    + String replyToken
    + String userId
    + String type
    + String|null text
    + [Key => Value]|null postbackData
    + Array|null location
  }

  note top of Event
    Event#typeについて
    Message.TextとMessage.File、Message.Location、Postbackの3種類
  end note

  class MessengerBot {
    - [MessageBuilder] messagesWillSent
    + FacebookBot|LineBot core
    + [Event:stdObject|null] getEvents()
    + addText(String message)
    + addTemplate(Array [String title, String description, String imageUrl, Array buttons])
    + addImage(String fileUrl, String previewUrl)
    + addVideo(String fileUrl, String previewUrl)
    + addAudio(String fileUrl, Int duration)
    + [String|Exception] push(String recipient)
    + [String|Exception] reply(String replyToken)
    + [String:String] getProfile(String userId)
    + [String:BinaryString] getFilesIn(Event message)
    - notifyAlive()
    - validateRequest()
  }

  note top of MessengerBot
    リクエストの検証処理(FacebookやLineからのリクエストかどうか)はgetEvents()内で行う
  end note

  class FacebookBot {
    + replyMessage(String to)
    + pushMessage(String to)
    + testSignature(String requestBody, String signature)
    + parseEvent(String requestBody)
    + getProfile(String userId)
    + [String:BinaryString] getFiles(Event event)
    + setText(String message)
    + setGeneric([String:String|Array])
    + setImage(String url)
    + setVideo(String url)
    + setAudio(String url)
  }

  class LineBot {
    + replyMessage(String to)
    + pushMessage(String to)
    + testSignature(String requestBody, String signature)
    + parseEvent(String requestBody)
    + getProfile(String userId)
    + [String:BinaryString] getFiles(Event event)
    + addText(String url)
    + addCarousel([String:String|Array])
    + addImage(String url, String previewUrl)
    + addVideo(String url, String previewUrl)
    + addAudio(String url, Int duration)
  }

  class Curl {
    + String post(String url, Array headers, Array bodyArray, Bool isJSON)
    + String get(String url, Array headers, Array aueryArray)
  }

}

' MessengerFramework内の関連

MessengerFramework.MessengerBot .d.> MessengerFramework.FacebookBot
MessengerFramework.MessengerBot .d.> MessengerFramework.LineBot
MessengerFramework.MessengerBot .l.> MessengerFramework.Curl
MessengerFramework.MessengerBot .l.> MessengerFramework.Event

MessengerFramework.FacebookBot *..> MessengerFramework.Curl

MessengerFramework.LineBot *..> MessengerFramework.Curl

@enduml
